--- a/package.json
+++ b/package.json
@@ -5,38 +5,59 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p ${PORT:-3000}",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "start": "next start",
+    "lint": "next lint",
     "format": "prettier --write .",
-    "type-check": "tsc --noEmit",
-    "storybook": "storybook dev -p 6006",
-    "sentry:init": "node scripts/sentry-init.js",
-    "postbuild": "node scripts/postbuild.js || true",
-    "prepare": "husky install",
-    "pwa:build": "echo 'pwa build placeholder'"
+    "test": "vitest run",
+    "vercel-build": "next build"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "axios": "^1.4.0",
-    "@sentry/nextjs": "^7.22.0",
-    "framer-motion": "^10.12.4",
-    "workbox-window": "^6.5.4",
-    "localforage": "^1.10.0",
-    "openid-client": "^5.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "openai": "^4.22.1",
-    "cookie": "^0.6.0"
+    "@headlessui/react": "^1.7.20",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@sentry/nextjs": "^8.29.0",
+    "@tanstack/react-query": "^5.51.11",
+    "axios": "^1.7.4",
+    "clsx": "^2.1.1",
+    "cookie": "^0.6.0",
+    "framer-motion": "^11.3.30",
+    "lucide-react": "^0.424.0",
+    "next": "14.2.6",
+    "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
+    "openai": "^4.56.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
+    "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
+    "shadcn-ui": "^0.9.3",
+    "tailwind-merge": "^2.2.2",
+    "web-push": "^3.6.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "typescript": "^5.5.0",
-    "@types/react": "^18.2.28",
-    "@types/node": "^20.3.1",
-    "tailwindcss": "^3.5.0",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
-    "prettier": "^2.8.8"
+    "@types/node": "^20.14.11",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.0",
+    "eslint-config-next": "^14.2.6",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "husky": "^9.1.1",
+    "lint-staged": "^15.2.9",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.3",
+    "vitest": "^1.6.1"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,json,css,md}": ["prettier --write"]
   }
 }
