--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "test": "vitest run",
-    "vercel-build": "next build"
+    "vercel-build": "next build",
+    "postinstall": "npx shadcn-ui@latest init -y"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.20",
+    "@headlessui/react": "^1.7.18",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
