--- a/package.json
+++ b/package.json
@@ -7,58 +7,48 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write .",
-    "test": "vitest run",
     "vercel-build": "next build",
-    "postinstall": "npx shadcn-ui@latest init -y"
+    "postinstall": "npx shadcn@latest init -y"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@heroicons/react": "^2.1.5",
     "@radix-ui/react-dialog": "^1.1.1",
-    "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@sentry/nextjs": "^8.29.0",
-    "@tanstack/react-query": "^5.51.11",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-toast": "^1.1.3",
+    "@sentry/nextjs": "^8.39.0",
+    "@types/jsonwebtoken": "^9.0.6",
+    "autoprefixer": "10.4.20",
     "axios": "^1.7.4",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cookie": "^0.6.0",
-    "framer-motion": "^11.3.30",
-    "lucide-react": "^0.424.0",
+    "dotenv": "^16.4.5",
+    "eslint": "^8.57.1",
+    "framer-motion": "^11.3.24",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.441.0",
     "next": "14.2.6",
-    "next-auth": "^4.24.7",
-    "next-themes": "^0.3.0",
-    "openai": "^4.56.0",
+    "postcss": "8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
-    "react-icons": "^5.2.1",
-    "react-toastify": "^10.0.5",
-    "shadcn-ui": "^0.9.3",
-    "tailwind-merge": "^2.2.2",
-    "web-push": "^3.6.6",
+    "react-hook-form": "^7.53.1",
+    "sharp": "^0.33.4",
+    "sonner": "^1.4.2",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "3.4.13",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20.14.11",
-    "@types/react": "^18.3.4",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/node": "^20.16.10",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.10.0",
-    "@typescript-eslint/parser": "^8.10.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.6",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
-    "husky": "^9.1.1",
-    "lint-staged": "^15.2.9",
-    "postcss": "^8.4.47",
+    "@typescript-eslint/eslint-plugin": "^8.7.0",
+    "@typescript-eslint/parser": "^8.7.0",
+    "eslint-config-next": "14.2.6",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.13",
-    "typescript": "^5.6.3",
-    "vitest": "^1.6.1"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,jsx,json,css,md}": ["prettier --write"]
+    "typescript": "^5.6.3"
   }
 }
