--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "vercel-build": "next build",
-    "postinstall": "npx shadcn@latest init -y"
+    "postinstall": "npx shadcn@latest init --style=\"new-york\" --yes"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
@@ -18,14 +18,13 @@
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-toast": "^1.1.3",
     "@sentry/nextjs": "^8.39.0",
-    "@types/jsonwebtoken": "^9.0.6",
     "autoprefixer": "10.4.20",
     "axios": "^1.7.4",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "eslint": "^8.57.1",
+    "eslint": "^8.58.0",
     "framer-motion": "^11.3.24",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
@@ -42,6 +41,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.16.10",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
@@ -50,5 +50,11 @@
     "eslint-config-next": "14.2.6",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
+  },
+  "overrides": {
+    "rimraf": "^4.0.0",
+    "glob": "^9.0.0",
+    "@humanwhocodes/object-schema": "@eslint/object-schema",
+    "@humanwhocodes/config-array": "@eslint/config-array"
   }
 }
