--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "next build",
-    "postinstall": "npx shadcn@latest init --style=\"new-york\" --yes"
+    "vercel-build": "next build"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
