--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "next": "14.2.6",
+    "openai": "^4.30.0",
     "postcss": "8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
